--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -1,8 +1,9 @@
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: test-kubernetes-component
-spec:
+  annotations:
+    backstage.io/kubernetes-id: my-kubernetes-component-v2
+  name: test-kubernetes-component-v2spec:
   lifecycle: production
   owner: my-team
   type: service
